spec/e2e/import/runtime_error_on_other_file.lit
import '../../fixtures/runtime_error.lit' # error: [runtime_error.lit:2] Runtime error: Undefined variable 'variable'.
